--- a/BlogMusica/css/estilos.css
+++ b/BlogMusica/css/estilos.css
@@ -2,6 +2,10 @@
   width: 30px;
 }
 
+.logored:hover {
+  opacity: 0.3;
+}
+
 .logopag {
   width: 150px;
 }
@@ -51,4 +55,41 @@
 
 .nobackgrownd {
   background: none;
+}
+
+.img-post {
+  width: 100%;
+}
+
+.post {
+  font-size: 14px !important;
+}
+
+.post-input {
+  margin-top: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  width: 95%;
+}
+
+.contenido {
+  padding-bottom: 10px;
+}
+
+.nopadding {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.text-input {
+  margin-right: 10px;
+  padding-right: 0;
+}
+
+.opcion-busqueda {
+  color: black;
+}
+
+.opcion-busqueda:hover {
+  text-decoration: none;
 }
