--- a/BlogGastronomia/css/app.css
+++ b/BlogGastronomia/css/app.css
@@ -1,4 +1,9 @@
 body {
   background:url("../img/fondobody.jpg") no-repeat center center;
+  background-attachment: fixed;
   background-size: cover;
+}
+
+.main {
+  background-color: blue;
 }
