--- a/BlogGastronomia/css/app.css
+++ b/BlogGastronomia/css/app.css
@@ -5,5 +5,29 @@ body {
 }
 
 .main {
-  background-color: blue;
+  background-color: rgba(91, 91, 142, 0.3);
+  margin-left: 5%;
+  margin-right: 5% !important;
+  max-width: 90%;
+}
+
+.encabezado {
+  border-bottom: 2px solid rgba(255,255,255,0.3);
+}
+
+.titulo {
+  border-right: 2px solid rgba(255,255,255,0.3);
+  margin-bottom: 10px;
+}
+
+@media (max-width: 639px) {
+  .main {
+    max-width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  .titulo {
+    border-right: none;
+  }
 }
